# init-paper

./: pyproject.toml
init_paper/: __main__.py  main.py
