[tool.poetry]
name = "init-paper"
version = "0.1.0"
description = ""
authors = ["vaibhavblayer <vaibhavblayer@gmail.com>"]
readme = "README.md"
packages = [{include = "init_paper"}]


[tool.poetry.scripts]
init-paper = "init_paper.main:main"


[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
