[tool.poetry]
name = "init-paper"
version = "0.1.1"
description = "Simple CLI tool to initiate jee/neet format paper in latex."
authors = ["vaibhavblayer <vaibhavblayer@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/vaibhavblayer/init-paper"
repository = "https://github.com/vaibhavblayer/init-paper"
keywords = ["jee", "paper", "jee paper", "neet paper"]
packages = [{include = "init_paper"}]


[tool.poetry.scripts]
init-paper = "init_paper.main:main"


[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
